<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:title="@string/search_hint"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>

    <item
        android:id="@+id/praveen"
        android:title="@string/sort_by"
        android:icon="@mipmap/profile_round"
        android:iconTint="@color/white"
        app:showAsAction="ifRoom"
        tools:targetApi="o">
        <menu>
            <item
                android:id="@+id/action_sortCreated"
                android:title="@string/praveen"/>
        </menu>
    </item>
</menu>