<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/todo_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:clickable="true"
    android:focusable="true"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/todo_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:contentDescription="@string/todo_icon"
                android:src="@drawable/ic_calendar_check_outline_24dp"
                app:layout_constraintEnd_toStartOf="@id/todo_name_text_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/todo_name_text_view"
                style="?attr/textAppearanceBody1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="@dimen/title_top"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textSize="20sp"
                android:textStyle="bold"
                android:padding="4dp"
                android:textAlignment="textStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/todo_icon"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/task" />

        </LinearLayout>


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/todo_description"
            style="?attr/textAppearanceCaption"
            android:layout_width="match_parent"
            android:layout_height="@dimen/description_height"
            android:layout_marginStart="60dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:textSize="15sp"
            android:layout_marginBottom="4dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:paddingStart="8dp"
            android:paddingEnd="4dp"
            android:textAlignment="gravity" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/time_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_access_time_24px"
                android:tint="@color/charcoral"
                android:tintMode="src_in"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/todo_description"
                app:layout_constraintTop_toBottomOf="@id/todo_description"
                app:layout_constraintVertical_bias="0.0" />

            <LinearLayout
                android:id="@+id/due"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="4dp"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/due_date_text_view"
                    style="?attr/textAppearanceBody2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:ellipsize="end"
                    android:text="@string/due_date"
                    android:textAlignment="textStart"
                    android:textSize="12sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/dueDate_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="30dp"
                    android:ellipsize="end"
                    android:textAlignment="textStart"
                    android:textColor="@color/red"
                    android:textSize="12sp"
                    tools:text="Date View" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</com.google.android.material.card.MaterialCardView>